--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/koa__router": "^12.0.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.7"
   }
 }
